--- a/custombuttons/button1.css
+++ b/custombuttons/button1.css
@@ -1,5 +1,23 @@
-.button1{
-    width: 100%;
-    height: 100%;
-    background-color: black;
+.button1 {
+    appearance: none;
+    width: 50%;
+    height: 30%;
+    border:none;
+    border-radius:20px ;
+    background-color: rgba(210, 19, 118, 0.8);
+    color: white;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    padding: 0;
+    cursor: pointer;
+    transition: transform .2s;
+}
+.button1:hover{
+    background-color: rgba(33, 19, 118, 0.8);
+    transform: scale(1.1);
+}
+.button1:active{
+    background-color: rebeccapurple;
+    transform: scale(0.9);
 }
