--- a/cardexamples/main.css
+++ b/cardexamples/main.css
@@ -18,13 +18,14 @@ body {
     flex-wrap: wrap;
     height: 100%;
     width: 100%;
-    gap: 20px;
+    /* gap: 20px; */
 }
 
 .box {
     margin-top: 20px;
-    width:50%;
-    height: 80%;
+    margin-left: 20px;
+    width:500px;
+    height: 500px;
     border: 5px solid black;
     display: flex;
     justify-content: center;
