--- a/navbarexamples/nav-sidebar.css
+++ b/navbarexamples/nav-sidebar.css
@@ -1,9 +1,9 @@
 .nav-sidebar {
     /* display: none; */
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
-    right: 0;
+    right: 0px;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
@@ -11,8 +11,33 @@
     width: 70%;
     height: 100%;
     background-color: white;
-}
-.nav-sidebar a {
-    display: block;
+    transition: right .5s ease-out;
 
+}
+
+
+
+.nav-sidebar a {
+    /* display: block; */
+    text-align: center;
+    text-decoration: none;
+    /* padding: 10px; */
+    width: 100%;
+    padding: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    appearance: none;
+    color: rgb(69, 68, 68);
+    border-radius: 20px;
+    transition: font-size .2s ease;
+}
+
+.nav-sidebar a:hover {
+    background-color: rgba(128, 128, 128, 0.5);
+    font-size: 1.1em;
+    color: black;
+
+}
+
+.nav-sidebar a:active{
+    transform: scale(.95);
 }
