--- a/subnavbar/main.css
+++ b/subnavbar/main.css
@@ -2,6 +2,15 @@
     margin: 0px;
     text-decoration: none;
     padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+
+html {
+    width: auto;
+    min-width: 95vw;
+    height: auto;
+    min-height: 100vw;
 }
 
 body {
@@ -10,10 +19,83 @@ body {
     /* align-items: center; */
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-width: 100%;
+    min-height: 200vh;
+    height: auto;
+}
+
+
+
+.main-nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    width: 100%;
+    height: 12%;
+    background-color: wheat;
+    /* justify-content: space-evenly; */
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+}
+
+.main-nav a {
+    display: flex;
+    color: blue;
+    font-size: x-large;
+    width: 150px;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
 
 .container {
-   color: black;
+    margin-top: 12vh;
+    width: 100%;
+    height: auto;
+    text-align: center;
+
+}
+
+.sub-nav {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    height: 40%;
+    background-color: lightblue;
+    margin-top: 12vh;
+    /* justify-content: flex-start; */
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    /* gap: 20px; */
+    overflow: auto;
+}
+
+.sub-nav a {
+    display: inline-block;
+    width: 150px;
+    height: 20%;
+    font-size: 20px;
+    /* text-align: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.flex {
+    display: flex;
 }
